# ContinuityBench

./: README.md  pyproject.toml
continuitybench/: __init__.py  adapters.py  cli.py  runner.py  schema.py  scoring.py
docs/: BENCHMARK_DESIGN.md
tasks/: mvp.json
tests/: test_scoring.py
