[project]
name = "continuitybench"
version = "0.1.0"
description = "A benchmark harness for evaluating continuity of thought in AI systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
continuitybench = "continuitybench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
